# Rusty

./: .gitignore  Cargo.toml  README.md  audit.toml  list_themes.rs
.github/workflows/: ci.yml
src/: main.rs
